Thu 30 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update assets loading (remove typekit)
	* Rename project as `Thun`

Wed 29 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update repository url

Fri 10 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add pyramid_secure_response (ssl redirect, HSTS header)

Fri 27 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update timeline
	* Update mobile layout (fix margin)
	* Add temporary pricing table and view
	* Refactor route and view (separate into multiple files)

Sat 14 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add customer section
	* Add signup button and login link
	* Set background colors

Mon 09 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add a note for license

Fri 06 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Remove Babbel (use GNU gettext, only)
	* Update translation files

Fri 20 Sep 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Refactor project dirs (test and venv)
	* Upgrade node environment

Sun 17 Sep 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update npm (and node_modules)
	* Update pyramid 1.9

Sat 09 Sep 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add python 2.7 support

Thu 27 Jul 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add a package for error investigation (better_exceptions)
	* Update templates (improve initial ux, before style application)

Tue 11 Jul 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update style and layout (optimize css)
	* Add firm logo and temporary product logo
	* Reduce image file size
	* Fix feature description and announcement

Mon 26 Jun 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add background image and transition animation

Sat 24 Jun 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Responsize layout (styr)
	* Add chat service integration
	* Setup deployment
