@@ -13,7 +13,7 @@ TINYLETTER_URL="/"
 TWITTER_URL="/"
 TYPEKIT_ID=""
 USERLIKE_SCRIPT="/"
-## [storage]
-STORAGE_BUCKET_HOST="cdn.example.com"
-STORAGE_BUCKET_NAME="bucket"
-STORAGE_BUCKET_PATH="/v1/static"
+## [bucket]
+BUCKET_HOST="cdn.example.com"
+BUCKET_NAME="org.example"
+BUCKET_PATH="/v1/static"
