@@ -23,10 +23,10 @@ pyramid_secure_response.hsts_preload = False
 pyramid_secure_response.proto_header =
 pyramid_secure_response.ignore_paths =
 
-# -- storage
-storage.bucket_host =
-storage.bucket_name =
-storage.bucket_path =
+# -- bucket (static)
+bucket.host =
+bucket.name =
+bucket.path =
 
 
 ###
