@@ -76,7 +76,7 @@ class TemplateUtility(object):
         from thun.route import STATIC_DIR
 
         def get_bucket_info(name):
-            part = self.req.settings.get('storage.bucket_{0:s}'.format(name))
+            part = self.req.settings.get('bucket.{0:s}'.format(name))
             if not part:
                 # returns invalid path
                 return ''
