@@ -1,3 +1,6 @@
+Thu 14 Dec 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Update bucket url
+
 Thu 30 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Update assets loading (remove typekit)
 	* Rename project as `Thun`
